@@ -3,6 +3,7 @@
 x.x:
 
 - added: support for user support staff members
+- fixed: saving SAML attributes on login
 
 2.3 (2013-09-30):
 
